--- a/resources.tex
+++ b/resources.tex
@@ -159,6 +159,23 @@ The funding of language resource development matters, because the way that the l
 
 As in Section~\ref{subsubsec:response}, covering all of the potential issues with funding and the politics of language development is well beyond the scope of this paper.
 
+
+\subsection{Non-English programming languages}
+
+\setcode{utf8}
+
+So far, there has been no mention of coding itself happening in languages besides English. The vast majority of the open source world uses English in documentation of code resources and in the code language itself. The first is self-explanatory; for the second, take for example the common tokens `if` and `else`, used in conditionals. These could be written in another language, as they are English words, or in another script, such as Arabic. However, this is rare. There are some cases of programming languages themselves being written in other languages, such as \< قلب > (Qalb), which is written in Arabic.\footnote{\href{http://qlb-repl.herokuapp.com/}{http://qlb-repl.herokuapp.com/}. \last{May~3}} For Qalb, the popular `hello world' command would be written:
+
+\begin{arabtext}
+(قول "مرحبا يا عالم"‏)
+\end{arabtext}
+
+More commonly, coding in another language means using translations of documentation. For instance, the Node.js\footnote{\href{https://nodejs.org/}{https://nodejs.org/}. \last{May~3}} i18n committee\footnote{\href{https://github.com/nodejs/i18n/}{https://github.com/nodejs/i18n/}. \last{May~3}} is currently working on tools to translate the most popular JavaScript framework's documentation into a few popular languages, like Spanish and Portuguese. Often, these efforts depend upon bilingual volunteers, willing to translate documentation into another language.
+
+The Online Historical Encyclopaedia of Programming Languages's website\footnote{\href{http://www.hopl.info/}{http://www.hopl.info/}. \last{May~3}} notes that the vast majority of languages were created in English speaking countries.\footnote{\href{http://www.hopl.info/countriesreportgr.prx}{http://www.hopl.info/countriesreportgr.prx}. \last{May~3}} For the most part, languages which are written in other languages do not have the same amount of reach or ecosystem size as languages developed in English. All of the top 15 languages on GitHub\footnote{\href{https://www.github.com}{https://github.com}. \last{May~3}} (see the next Chapter, below, for more on GitHub) in 2017 were written in English.\footnote{\href{https://octoverse.github.com/}{https://octoverse.github.com/}. \last{May~3}}
+
+That English is needed to code means that any coder wishing to develop resources in their native language will most likely need to use English or other major languages for the vast majority of the work. While solving this problem is out of scope here, it is worth mentioning this aspect of language resource development. There is active work in this field, both for high and for low resource languages; for instance, Lassi\footnote{\href{https://github.com/julienmalard/Lassi}{https://github.com/julienmalard/Lassi}. \last{May~3}} is a tool in development which allows Kaqchikel speakers to code entirely in their own language, by automatically translating code from one language to another. Any language could become supported, so this is an exciting possible area of future work.
+
 \subsection{Summary}
 
 % You need something more of a conclusion for this chapter -- right now it's just " there are a lot of issues and I only have space to talk about some of them " -- what are the takeaway messages from this chapter?
