--- a/references.bib
+++ b/references.bib
@@ -1214,6 +1214,15 @@ publisher={Blackwell}
   publisher={Indiana University}
 }
 
+@inproceedings{mubarak2014using,
+  title={Using Twitter to collect a multi-dialectal corpus of Arabic},
+  author={Mubarak, Hamdy and Darwish, Kareem},
+  booktitle={Proceedings of the EMNLP 2014 Workshop on Arabic Natural Language Processing (ANLP)},
+  pages={1--7},
+  year={2014}
+}
+
+
 @inproceedings{lewis2010haitian,
  title={{Haitian Creole}: How to Build and Ship an {MT} Engine from Scratch in 4 days, 17 hours, \& 30 minutes},
  author={Lewis, Will},
